# cg_trabalho3d

./: CMakeLists.txt  main.cpp  makefile  material.cpp  material.h  objloader.cpp  objloader.h  player.cpp  player.h  stb_image.h  tinyxml2.cpp  tinyxml2.h
modelos 3d/lutador/Punching Left/punchleft00/: punchleft00.mtl
modelos 3d/lutador/Punching Left/punchleft09/: punchleft09.mtl
modelos 3d/lutador/Punching Right/punchright08/: punchright08.mtl
modelos 3d/lutador/Short Step Forward/walking18/: walking18.mtl
